# hack_ras

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run_tests.py
docs/: TODO.md  ai_context.md  dev_rules.md
examples/: load_and_list_xs.py  load_project.py
geometry/: parser.py  writer.py
geometry/blocks/: river_reach.py  xs_gis.py  xs_metadata.py
hack_ras/: __init__.py  resolve.py  version.py
hack_ras/geometry/: __init__.py  active_flow.py  merge.py  model.py  parser.py  shift.py  xs_cutline_blend.py  xs_interp.py
hack_ras/geometry/blocks/: base.py  xs_bank_sta.py  xs_block_obstruct.py  xs_gis.py  xs_ineff.py  xs_levee.py  xs_mann.py  xs_metadata.py  xs_sta_elev.py
hack_ras/gis/: model.py  profile.py
hack_ras/project/: catalog.py  model.py  parser.py  plans.py  ras_project.py  rasmap.py  resolve.py  sync.py
hack_ras/results/: model.py  reader.py
hack_ras/utils/: lines.py
project/: model.py
tests/: conftest.py  test_active_flow.py  test_expand_id_spec.py  test_find_crs_prj.py  test_geometry_merge.py  test_geometry_parse.py  test_geometry_roundtrip.py  test_gis_profile.py  test_levee_obstruct.py  test_pipe_results.py  test_plan_ops.py  test_plan_ops_fixture.py  test_ras_project.py  test_rasmap.py  test_resolve_default_geom.py  test_results_reader.py  test_steady_wse.py  test_version.py  test_volume_reader.py  test_xs_interp_lengths.py  test_xs_shift.py
tests/data/: 2D_culvert_bridge_levee_precip_and_pipes.p01  2D_culvert_bridge_levee_precip_and_pipes.p01.hdf
tests/data/2D culvert bridge levee precip pipes/: Model.b02  Model.b04  (+26 more)
(+57 files in other folders)
